# mutsplice

./: .gitignore  README.md  conda_env.yaml  pip_requirements.txt  setup.cfg
data/: SplicingENCODE_with_HepG2_data.txt
data/2_paired_datasets/: ADAR_data.tsv  AKAP8L_data.tsv  BUD13_data.tsv  CCAR2_data.tsv  CDC40_data.tsv  CELF1_data.tsv  DAZAP1_data.tsv  DDX20_data.tsv  DDX5_data.tsv  EFTUD2_data.tsv  EWSR1_data.tsv  FMR1_data.tsv  FUBP1_data.tsv  FUS_data.tsv  GEMIN5_data.tsv  GPKOW_data.tsv  HNRNPA1_data.tsv  HNRNPA2B1_data.tsv  HNRNPC_data.tsv  HNRNPD_data.tsv  HNRNPF_data.tsv  HNRNPH1_data.tsv  HNRNPK_data.tsv  HNRNPLL_data.tsv  HNRNPL_data.tsv  HNRNPM_data.tsv  HNRNPU_data.tsv  KHDRBS1_data.tsv  KHSRP_data.tsv  MATR3_data.tsv  NCBP2_data.tsv  NONO_data.tsv  PCBP1_data.tsv  PCBP2_data.tsv  PPIG_data.tsv  PPP1R8_data.tsv  PRPF6_data.tsv  PRPF8_data.tsv  PSIP1_data.tsv  PTBP1_data.tsv  (+32 more)
explainer/datasets/: make_inferences.py  manage_spliceai.py  preprocessing.py  tabular_dataset.py  utils.py
explainer/motifs/: motif_scanning.py
explainer/mutations/: mutate_seqs.py
gtfhandle/: cache_gtf.py  extract_surrounding_features.py  features.py  parse_gtf.py  regions.py  transcripts.py  utils.py
notebooks/: 0_ENCODE_KD_splicing_analysis.ipynb  1_build_paired_datasets.ipynb  2_run_mutsplice.ipynb  2_run_mutsplice_corsa.ipynb  3_analyse_mutsplice.ipynb  4_generateTabularDatasets.ipynb  5_ML_fromTabularDatasets.ipynb  5_list_lsgkm_data.txt  5_process_lsgkm_results.ipynb  5_run_classification_lsgkm.sbatch  5_run_regression_lsgkm.sbatch
vcfhandle/: utils.py
(+61 files in other folders)
