[metadata]
name = mutsplice
version = 0.0.1
author = Pedro Barbosa
author_email = psbpedrobarbosa@gmail.com
description = Genomics Terminology Flexibility - Handling genomics features and intervals from GTF files.
long_description = file: README.md
long_description_content_type = text/markdown

classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
include_package_data = True  # Optional, can be omitted if included in setup.py
packages = find:
python_requires = >=3.9

[options.packages.find]
exclude =
    ./notebooks
    ./mutsplice/tests
    ./gtfhandle/tests

[options.package_data]
mutsplice = 
    mutsplice/motifs/db/*
